# instagram-youtube-soundcloud-downloader

./: .env.example  .gitattributes  .gitignore  GITHUB_REPO.md  README.ar.md  README.de.md  README.fa.md  README.md  index.html  install.py  pyproject.toml  remove.py  requirements.txt  run.py  uninstall.py  update.py
downloader_bot/: __init__.py  __main__.py  bot.py  config.py  downloader.py  i18n.py  sender.py  state.py  utils.py
tests/: test_downloader.py  test_i18n_state.py  test_installer.py  test_utils.py
